; ModuleID = '/home/carl/AnghaBench/reactos/boot/freeldr/freeldr/arch/i386/extr_machxbox.c_XboxMachInit.c'
source_filename = "/home/carl/AnghaBench/reactos/boot/freeldr/freeldr/arch/i386/extr_machxbox.c_XboxMachInit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32 }

@.str = private unnamed_addr constant [5 x i8] c"rrrr\00", align 1
@XboxConsPutChar = common dso_local global i32 0, align 4
@MachVtbl = common dso_local global %struct.TYPE_2__ zeroinitializer, align 4
@XboxConsKbHit = common dso_local global i32 0, align 4
@XboxConsGetCh = common dso_local global i32 0, align 4
@XboxVideoClearScreen = common dso_local global i32 0, align 4
@XboxVideoSetDisplayMode = common dso_local global i32 0, align 4
@XboxVideoGetDisplaySize = common dso_local global i32 0, align 4
@XboxVideoGetBufferSize = common dso_local global i32 0, align 4
@XboxVideoGetFontsFromFirmware = common dso_local global i32 0, align 4
@XboxVideoSetTextCursorPosition = common dso_local global i32 0, align 4
@XboxVideoHideShowTextCursor = common dso_local global i32 0, align 4
@XboxVideoPutChar = common dso_local global i32 0, align 4
@XboxVideoCopyOffScreenBufferToVRAM = common dso_local global i32 0, align 4
@XboxVideoIsPaletteFixed = common dso_local global i32 0, align 4
@XboxVideoSetPaletteColor = common dso_local global i32 0, align 4
@XboxVideoGetPaletteColor = common dso_local global i32 0, align 4
@XboxVideoSync = common dso_local global i32 0, align 4
@PcBeep = common dso_local global i32 0, align 4
@XboxPrepareForReactOS = common dso_local global i32 0, align 4
@XboxMemGetMemoryMap = common dso_local global i32 0, align 4
@XboxGetExtendedBIOSData = common dso_local global i32 0, align 4
@XboxGetFloppyCount = common dso_local global i32 0, align 4
@XboxDiskReadLogicalSectors = common dso_local global i32 0, align 4
@XboxDiskGetDriveGeometry = common dso_local global i32 0, align 4
@XboxDiskGetCacheableBlockCount = common dso_local global i32 0, align 4
@XboxGetTime = common dso_local global i32 0, align 4
@PcInitializeBootDevices = common dso_local global i32 0, align 4
@XboxHwDetect = common dso_local global i32 0, align 4
@XboxHwIdle = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [5 x i8] c"oooo\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @XboxMachInit(i8* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  store i8* %0, i8** %3, align 8
  %4 = call i32 @XboxSetLED(i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0))
  %5 = call i32 (...) @XboxMemInit()
  %6 = call i32 (...) @XboxVideoInit()
  %7 = load i32, i32* @XboxConsPutChar, align 4
  store i32 %7, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @MachVtbl, i32 0, i32 27), align 4
  %8 = load i32, i32* @XboxConsKbHit, align 4
  store i32 %8, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @MachVtbl, i32 0, i32 26), align 4
  %9 = load i32, i32* @XboxConsGetCh, align 4
  store i32 %9, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @MachVtbl, i32 0, i32 25), align 4
  %10 = load i32, i32* @XboxVideoClearScreen, align 4
  store i32 %10, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @MachVtbl, i32 0, i32 24), align 4
  %11 = load i32, i32* @XboxVideoSetDisplayMode, align 4
  store i32 %11, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @MachVtbl, i32 0, i32 23), align 4
  %12 = load i32, i32* @XboxVideoGetDisplaySize, align 4
  store i32 %12, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @MachVtbl, i32 0, i32 22), align 4
  %13 = load i32, i32* @XboxVideoGetBufferSize, align 4
  store i32 %13, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @MachVtbl, i32 0, i32 21), align 4
  %14 = load i32, i32* @XboxVideoGetFontsFromFirmware, align 4
  store i32 %14, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @MachVtbl, i32 0, i32 20), align 4
  %15 = load i32, i32* @XboxVideoSetTextCursorPosition, align 4
  store i32 %15, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @MachVtbl, i32 0, i32 19), align 4
  %16 = load i32, i32* @XboxVideoHideShowTextCursor, align 4
  store i32 %16, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @MachVtbl, i32 0, i32 18), align 4
  %17 = load i32, i32* @XboxVideoPutChar, align 4
  store i32 %17, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @MachVtbl, i32 0, i32 17), align 4
  %18 = load i32, i32* @XboxVideoCopyOffScreenBufferToVRAM, align 4
  store i32 %18, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @MachVtbl, i32 0, i32 16), align 4
  %19 = load i32, i32* @XboxVideoIsPaletteFixed, align 4
  store i32 %19, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @MachVtbl, i32 0, i32 15), align 4
  %20 = load i32, i32* @XboxVideoSetPaletteColor, align 4
  store i32 %20, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @MachVtbl, i32 0, i32 14), align 4
  %21 = load i32, i32* @XboxVideoGetPaletteColor, align 4
  store i32 %21, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @MachVtbl, i32 0, i32 13), align 4
  %22 = load i32, i32* @XboxVideoSync, align 4
  store i32 %22, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @MachVtbl, i32 0, i32 12), align 4
  %23 = load i32, i32* @PcBeep, align 4
  store i32 %23, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @MachVtbl, i32 0, i32 11), align 4
  %24 = load i32, i32* @XboxPrepareForReactOS, align 4
  store i32 %24, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @MachVtbl, i32 0, i32 10), align 4
  %25 = load i32, i32* @XboxMemGetMemoryMap, align 4
  store i32 %25, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @MachVtbl, i32 0, i32 9), align 4
  %26 = load i32, i32* @XboxGetExtendedBIOSData, align 4
  store i32 %26, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @MachVtbl, i32 0, i32 8), align 4
  %27 = load i32, i32* @XboxGetFloppyCount, align 4
  store i32 %27, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @MachVtbl, i32 0, i32 7), align 4
  %28 = load i32, i32* @XboxDiskReadLogicalSectors, align 4
  store i32 %28, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @MachVtbl, i32 0, i32 6), align 4
  %29 = load i32, i32* @XboxDiskGetDriveGeometry, align 4
  store i32 %29, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @MachVtbl, i32 0, i32 5), align 4
  %30 = load i32, i32* @XboxDiskGetCacheableBlockCount, align 4
  store i32 %30, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @MachVtbl, i32 0, i32 4), align 4
  %31 = load i32, i32* @XboxGetTime, align 4
  store i32 %31, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @MachVtbl, i32 0, i32 3), align 4
  %32 = load i32, i32* @PcInitializeBootDevices, align 4
  store i32 %32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @MachVtbl, i32 0, i32 2), align 4
  %33 = load i32, i32* @XboxHwDetect, align 4
  store i32 %33, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @MachVtbl, i32 0, i32 1), align 4
  %34 = load i32, i32* @XboxHwIdle, align 4
  store i32 %34, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @MachVtbl, i32 0, i32 0), align 4
  %35 = call i32 @XboxSetLED(i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.1, i64 0, i64 0))
  %36 = load i32, i32* %2, align 4
  ret i32 %36
}

declare dso_local i32 @XboxSetLED(i8*) #1

declare dso_local i32 @XboxMemInit(...) #1

declare dso_local i32 @XboxVideoInit(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
